<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Usuario.CadastrarUsuarioActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:background="@drawable/gradient">

    <com.example.mayar.befit.Adapter.CustomImageView
        android:id="@+id/id_escolher_foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_upload_foto_round" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_nome"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_escolher_foto">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_nome_cadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_nome"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_idade"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_til_nome">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_idade_cadastro"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_sexo"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/id_til_celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_til_idade"
        app:layout_constraintTop_toBottomOf="@+id/id_til_nome">

        <Spinner
            android:id="@+id/id_sexo_cadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hint_sexo"
            android:paddingLeft="10dp"
            android:popupBackground="@color/ic_upload_foto_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_celular"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_til_idade"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_celular_cadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_celular"
            android:inputType="phone"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_estado"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toTopOf="@+id/id_til_email_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_celular">

        <Spinner
            android:id="@+id/id_estado_cadastro"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hint_estado"
            android:paddingLeft="10dp"
            android:popupBackground="@color/ic_upload_foto_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_cidade"
        android:layout_width="237dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_til_estado"
        app:layout_constraintTop_toBottomOf="@+id/id_til_celular"
        tools:ignore="MissingConstraints">

        <Spinner
            android:id="@+id/id_cidade_cadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hint_cidade"
            android:paddingLeft="10dp"
            android:popupBackground="@color/ic_upload_foto_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_email_cadastro"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_cidade"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_email_cadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_email"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_senha_cadastro"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/id_botao_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_email_cadastro"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_senha"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/id_botao_cadastro"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/screen_border"
        android:backgroundTint="@color/colorAccent"
        android:elevation="4dp"
        android:text="Cadastrar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
</ScrollView>