<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.mayar.befit.Usuario.AlterarUsuarioActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <com.example.mayar.befit.Adapter.CustomImageView
        android:id="@+id/id_foto_usuario_alterar"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/ic_user_round" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_nome"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_alterar_foto">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_nome_alterar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_nome"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_idade"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_til_nome">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_idade_alterar"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_idade"
            android:inputType="number"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_sexo"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/id_til_celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_til_idade"
        app:layout_constraintTop_toBottomOf="@+id/id_til_nome">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/id_sexo_alterar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hint_sexo"
            android:paddingLeft="10dp"
            android:popupBackground="@color/ic_upload_foto_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_celular"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_til_idade"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_celular_alterar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_celular"
            android:inputType="phone"
            android:paddingLeft="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_estado"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"

        app:layout_constraintBottom_toTopOf="@+id/id_til_email_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_celular">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/id_estado_alterar"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hint_estado"
            android:paddingLeft="10dp"
            android:popupBackground="@color/ic_upload_foto_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_til_cidade"
        android:layout_width="237dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_til_estado"
        app:layout_constraintTop_toBottomOf="@+id/id_til_celular"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/id_cidade_alterar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:hint="@string/hint_cidade"
            android:paddingLeft="10dp"
            android:popupBackground="@color/ic_upload_foto_background" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/id_botao_alterar"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/screen_border"
        android:backgroundTint="@color/colorAccent"
        android:elevation="4dp"
        android:text="Salvar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_til_cidade" />

    <TextView
        android:id="@+id/id_alterar_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Alterar imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_foto_usuario_alterar" />
</android.support.constraint.ConstraintLayout>
